Allows Java easy runs